# irreducible-cfg

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
docker/: Dockerfile
include/: CheckIrreducibleCFG.h  Graph.h
src/: CheckIrreducibleCFG.cpp
tools/: build.sh  clean.sh  run.sh
